--- a/requirements.txt
+++ b/requirements.txt
@@ -1,4 +1,6 @@
 asgiref==3.4.1
+certifi==2021.10.8
+cloudinary==1.28.0
 dj-database-url==0.5.0
 Django==4.0
 django-bootstrap3==21.1
@@ -14,7 +16,9 @@ Pillow==8.4.0
 psycopg2==2.9.2
 psycopg2-binary==2.9.2
 pytz==2021.3
+six==1.16.0
 sqlparse==0.4.2
 swapper==1.3.0
+urllib3==1.26.7
 whitenoise==5.3.0
 zipp==3.6.0
