--- a/requirements.txt
+++ b/requirements.txt
@@ -2,7 +2,7 @@ asgiref==3.4.1
 certifi==2021.10.8
 cloudinary==1.28.0
 dj-database-url==0.5.0
-Django==4.0
+Django==3.2.9
 django-bootstrap3==21.1
 django-braces==1.15.0
 django-filter==21.1
@@ -15,6 +15,7 @@ Markdown==3.3.6
 Pillow==8.4.0
 psycopg2==2.9.2
 psycopg2-binary==2.9.2
+python-decouple==3.5
 pytz==2021.3
 six==1.16.0
 sqlparse==0.4.2
