--- a/requirements.txt
+++ b/requirements.txt
@@ -10,6 +10,7 @@ django-heroku==0.3.1
 django-model-utils==4.2.0
 django-star-ratings==0.9.2
 djangorestframework==3.12.4
+gunicorn==20.1.0
 importlib-metadata==4.8.2
 Markdown==3.3.6
 Pillow==8.4.0
